# finance_dashboard

./: .gitignore  README.md  pyproject.toml  run_dashboard.py
data/: fake_dataset.csv
finanzas/: __init__.py  dashboard.py  gendata.py
finanzas/data/: __init__.py  loader.py
finanzas/ui/: __init__.py  ai_categorization.py  dashboard.py  dataset.py  filters.py  grid.py  import_data.py  kpis.py  sidebar.py  treemaps.py  trends.py
finanzas/utils/: ai.py  calculations.py  formatting.py
